# agent_skills

./: .gitignore  README.md  merge-config.nu  opencode.json  pytest.ini
.devtools/: pyproject.toml
.devtools/agent_skills_lib/: __init__.py  paths.py  validation.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.kilocode/skills/nushell/: SKILL.md
.kilocode/skills/skill-creator/: SKILL.md  pyproject.toml
.kilocode/skills/skill-sync/: SKILL.md
.kilocode/skills/unit-testing/: SKILL.md
scripts/: merge-config.nu  push-skills.nu
skills/ast-grep/: SKILL.md
skills/ast-grep/references/: c-cpp-patterns.md  cli-reference.md  pattern-syntax.md  recipes.md  rule-reference.md
skills/ast-grep/scripts/: init_project.py  run_analysis.py
skills/docling/: SKILL.md
skills/docling/references/: format_reference.md
skills/docling/scripts/: convert_document.py
skills/fnm/: SKILL.md
skills/fnm/references/: commands.md  nushell-setup.md
skills/nushell/: SKILL.md
skills/nushell/references/: language-guide.md
skills/nushell/scripts/: nu_invoke.py  nu_run.py
skills/skill-creator/: SKILL.md
skills/skill-creator/scripts/: init_skill.py  package_skill.py  quick_validate.py
skills/skill-sync/: SKILL.md
skills/skill-sync/scripts/: deploy.py  (+1 more)
skills/tools/: SKILL.md
skills/unit-testing/: SKILL.md
skills/uv/: SKILL.md
tests/: conftest.py  test_ast_grep.py  test_deploy_pull.py  test_docling.py  test_init_skill.py  test_integration.py  test_nu_invoke.py  test_nu_run.py  test_nushell_skill.py  test_package_skill.py  test_validate_skill.py
(+31 files in other folders)
