[project]
name = "agent-skills-devtools"
version = "0.1.0"
description = "Shared Python development tooling for agent skills"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["agent_skills_lib"]

[tool.coverage.report]
show_missing = true
skip_empty = true
